--- a/composer.json
+++ b/composer.json
@@ -1,29 +1,33 @@
 {
-	"name"        : "rarst/meadow",
-	"description" : "WordPress templating DSL",
-	"keywords"    : ["wordpress", "twig"],
-	"homepage"    : "https://github.com/Rarst/meadow",
-	"license"     : "MIT",
-	"authors"     : [
-		{
-			"name"    : "Andrey Savchenko",
-			"homepage": "https://www.Rarst.net/"
-		}
-	],
-	"support"     : {
-		"issues": "https://github.com/Rarst/meadow/issues"
-	},
-	"require"     : {
-		"php": ">=7.0",
-		"pimple/pimple": "^3.2.3",
-		"twig/twig": "^2.6"
-	},
-	"require-dev": {
-		"pds/skeleton": "^1.0"
-	},
-	"autoload"    : {
-		"psr-4": {
-			"Rarst\\Meadow\\" : "src/"
-		}
-	}
+    "type": "library",
+    "name": "rarst/meadow",
+    "description": "WordPress templating DSL",
+    "keywords": [ "wordpress", "twig" ],
+    "homepage": "https://github.com/Rarst/meadow",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Andrey Savchenko",
+            "homepage": "https://www.Rarst.net/"
+        }
+    ],
+    "support": {
+        "issues": "https://github.com/Rarst/meadow/issues"
+    },
+    "require": {
+        "php": ">=7.0",
+        "pimple/pimple": "^3.2.3",
+        "twig/twig": "^2.6"
+    },
+    "require-dev": {
+        "pds/skeleton": "^1.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "Rarst\\Meadow\\": "src/"
+        }
+    },
+    "config": {
+        "sort-packages": true
+    }
 }
