--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,11 @@
         "pimple/pimple": "^3.2.3",
         "twig/twig": "^2.6"
     },
+    "require-dev": {
+        "automattic/phpcs-neutron-ruleset": "^3.2",
+        "dealerdirect/phpcodesniffer-composer-installer": "^0.6.2",
+        "squizlabs/php_codesniffer": "^3.5"
+    },
     "autoload": {
         "psr-4": {
             "McAskill\\Meadow\\": "src/"
